# Vartalaap

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.admin  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  openapi.json  pyproject.toml
.claude/: settings.json
.claude/skills/: README.md  admin.md  api.md  backend.md  frontend.md  model.md  voice.md
admin/: __init__.py  app.py
admin/components/: auth.py  metrics.py  tables.py
admin/pages/: 1_dashboard.py  2_reservations.py  3_call_logs.py  4_config.py  5_voice_test.py  6_menu_editor.py  7_faq_editor.py  8_knowledge_test.py
config/business/: himalayan_kitchen.yaml
config/keycloak/: vartalaap-realm.json
config/prompts/: clinic_bot.txt  general_bot.txt  restaurant_bot.txt  salon_bot.txt
docs/: PRD.md  TECH_STACK.md
migrations/: env.py
migrations/versions/: 3a61101b3832_add_call_source_to_call_logs.py  5f7a9c1d2e3f_add_voice_and_rag_profiles_to_businesses.py  add_multi_business_knowledge_tables.py  c3d4e5f6a7b8_add_latency_rating_summary_to_call_logs.py  cafe78f9263c_initial_schema_call_logs_reservations_.py  d4e5f6a7b8c9_add_transcript_review_tables.py
schemas/: audit_log.json  business.json  call_log.json  caller_preferences.json  conversation_turn.json  knowledge_item.json  reservation.json  whatsapp_followup.json
scripts/: chat_cli.py  demo_conversation.py  export_openapi.py  generate-fullstack.sh  generate.sh  generate_keys.py  init_db.py  migrate_yaml_to_db.py  test_call.py  test_llm.py  test_tts.py  voice_test.py
src/: __init__.py  config.py  logging_config.py  main.py  worker.py
src/api/: __init__.py  auth.py
src/api/routes/: business.py  call_logs.py  crud.py  health.py  knowledge.py  metrics.py  plivo_webhook.py  reviews.py  voice.py
src/api/static/: voice.html
src/api/websocket/: __init__.py  audio_stream.py
src/core/: __init__.py  context.py  conversation_state.py  pipeline.py  reservation_flow.py  session.py
src/db/: __init__.py  models.py  session.py
src/db/repositories/: __init__.py  businesses.py  calls.py  reservations.py
src/observability/: __init__.py  metrics.py
src/prompts/: __init__.py  extraction.py  restaurant.py
src/schemas/: __init__.py  _generated.py  audit_log.py  business.py  call_log.py  caller_preferences.py  conversation_turn.py  knowledge_item.py  reservation.py  whatsapp_followup.py
src/security/: __init__.py  auth.py  crypto.py
src/services/: whatsapp.py
src/services/analysis/: __init__.py  transcript_crew.py
src/services/knowledge/: __init__.py  chromadb_store.py  embeddings.py  protocol.py  retriever.py
src/services/llm/: __init__.py  exceptions.py  extractor.py  groq.py  protocol.py  rate_limiter.py  token_counter.py
src/services/stt/: __init__.py  deepgram.py  protocol.py
src/services/telephony/: __init__.py  plivo.py
src/services/tts/: __init__.py  edge.py  elevenlabs.py  exceptions.py  piper.py  protocol.py  resampler.py
tests/: __init__.py  conftest.py  test_worker_analysis.py
tests/test_api/: test_business_voice_options.py  test_health.py  test_plivo_webhook.py  test_reservations.py  test_reviews.py  test_websocket.py
tests/test_core/: test_conversation_state.py  test_pipeline.py  test_reservation_flow.py
tests/test_db/: test_repositories.py
tests/test_observability/: __init__.py  test_metrics.py
tests/test_services/: test_deepgram.py  test_extractor.py  test_groq.py  test_plivo.py  test_rate_limiter.py  test_transcript_crew.py  test_tts.py
web/: .env.example  Caddyfile  Dockerfile  index.html  orval.config.ts  package-lock.json  package.json  vite.config.ts
web/public/: silent-refresh.html
web/src/: App.tsx
web/src/api/endpoints/business/: business.ts
web/src/api/endpoints/call-logs/: call-logs.ts
web/src/api/endpoints/crud/: crud.ts
web/src/api/endpoints/default/: default.ts
web/src/api/endpoints/health/: health.ts
web/src/api/endpoints/knowledge/: knowledge.ts
web/src/api/endpoints/observability/: observability.ts
web/src/api/endpoints/plivo/: plivo.ts
web/src/api/endpoints/reviews/: reviews.ts
web/src/api/endpoints/voice/: voice.ts
web/src/api/model/: bodyProcessVoiceApiVoiceProcessPost.ts  businessResponse.ts  businessResponseGreetingText.ts  businessResponseMenuSummary.ts  businessResponseOperatingHours.ts  businessStatus.ts  businessType.ts  businessUpdate.ts  businessUpdateGreetingText.ts  businessUpdateMenuSummary.ts  businessUpdateName.ts  businessUpdateOperatingHours.ts  businessUpdateOperatingHoursAnyOf.ts  businessUpdatePhoneNumbers.ts  businessUpdateReservationRules.ts  businessUpdateTimezone.ts  callCategory.ts  callLogResponse.ts  callLogResponseCallCategory.ts  callLogResponseCallEnd.ts  callLogResponseCallRating.ts  callLogResponseCallSummary.ts  callLogResponseCallerFeedback.ts  callLogResponseCallerIdHash.ts  callLogResponseConsentType.ts  callLogResponseDetectedLanguage.ts  callLogResponseDurationSeconds.ts  callLogResponseExtractedInfo.ts  callLogResponseLlmLatencyP50Ms.ts  callLogResponseOutcome.ts  callLogResponseRatingMethod.ts  callLogResponseSttLatencyP50Ms.ts  callLogResponseTranscript.ts  callLogResponseTtsLatencyP50Ms.ts  callLogSummary.ts  callLogSummaryCallsByLanguage.ts  callLogSummaryCallsByOutcome.ts  callOutcome.ts  callSource.ts  consentType.ts  (+83 more)
web/src/api/mutator/: custom-instance.ts
web/src/components/: ProtectedRoute.tsx
web/src/components/layout/: Layout.tsx
web/src/lib/: auth.ts  business.ts  utils.ts
web/src/pages/: CallLogs.tsx  Dashboard.tsx  FAQEditor.tsx  KnowledgeTest.tsx  MenuEditor.tsx  Reservations.tsx  Reviews.tsx  Settings.tsx  Unauthorized.tsx  VoiceTest.tsx
web/src/styles/: globals.css
