[project]
name = "vartalaap"
version = "0.1.0"
description = "Voice bot platform for local Indian businesses"
readme = "CLAUDE.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Pronav Slathia" }]
keywords = ["voice-bot", "fastapi", "hindi", "restaurant", "telephony"]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.34.0,<0.35",
    "websockets>=14.0,<15",

    # Database
    "sqlmodel>=0.0.22,<0.1",
    "alembic>=1.14.0,<2",
    "aiosqlite>=0.20.0,<0.21",

    # Voice Pipeline
    "deepgram-sdk>=3.7.0,<4",
    "piper-tts>=1.2.0,<2",
    "edge-tts>=6.1.0,<7",  # Feature-flagged fallback
    "groq>=0.13.0,<1",
    "plivo>=4.60.0,<5",

    # Audio Processing
    "soundfile>=0.12.0,<0.13",
    "soxr>=0.5.0,<0.6",
    "numpy>=2.0.0,<3",

    # Background Tasks (arq handles both tasks + cron)
    "arq>=0.26.0,<0.27",
    "redis[hiredis]>=5.0.0,<6",

    # Config
    "pydantic-settings>=2.5.0,<3",
    "pyyaml>=6.0.0,<7",

    # Security
    "cryptography>=44.0.0,<45",
    "bcrypt>=4.2.0,<5",

    # HTTP
    "aiohttp>=3.11.0,<4",

    # Logging
    "loguru>=0.7.0,<0.8",

    # CRUD Generation (runtime - used in API routes)
    "fastapi-crudrouter>=0.8.0,<0.9",
]

[project.optional-dependencies]
admin = [
    "streamlit>=1.41.0,<2",
    "streamlit-extras>=0.4.0,<0.5",
    "streamlit-authenticator>=0.3.0,<0.4",
]
dev = [
    # Code Quality
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    # Testing
    "ward>=0.68.0",
    "pytest-asyncio>=0.24.0",
    "coverage>=7.0.0",
    "httpx>=0.27.0",  # For testing FastAPI
    # Code Generation (dev-only tools)
    "datamodel-code-generator>=0.26.0,<0.27",  # Pydantic from JSON Schema
    "eralchemy2>=1.4.0,<2",                     # ER diagrams from SQLModel
    # Local Development
    "sounddevice>=0.5.0,<0.6",                 # Local mic testing only
]

[project.urls]
Homepage = "https://github.com/PranavSlathia/Vartalaap"
Repository = "https://github.com/PranavSlathia/Vartalaap"
Documentation = "https://github.com/PranavSlathia/Vartalaap#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# =============================================================================
# Ruff - Linting & Formatting
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "admin", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ASYNC", # flake8-async
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "admin"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# MyPy - Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Gradually enable
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# =============================================================================
# Ward - Testing
# =============================================================================
[tool.ward]
path = ["tests"]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/schemas/*",  # Generated files
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
